--- a/swarch2022ii_ag/docker-compose.yml
+++ b/swarch2022ii_ag/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 5000:5000
 
     environment:
-      - MS_BASE_URL=http://ms:4000/categories
+      MS_BASE_URL: http://ms:4000/categories
 
     links:
       - ms
