--- a/swarch2022ii_ldap/docker-compose.yml
+++ b/swarch2022ii_ldap/docker-compose.yml
@@ -7,26 +7,26 @@ services:
     container_name: swarch2022ii_ldap
 
     environment:
-      - COMPOSE_HTTP_TIMEOUT=200
-      - LDAP_LOG_LEVEL=256
-      - LDAP_ORGANISATION=Software Architecture
-      - LDAP_DOMAIN=arqsoft.unal.edu.co
-      - LDAP_BASE_DN=
-      - LDAP_ADMIN_PASSWORD=admin
-      - LDAP_CONFIG_PASSWORD=config
-      - LDAP_READONLY_USER=false
-      - LDAP_BACKEND=hdb
-      - LDAP_TLS=true
-      - LDAP_TLS_CRT_FILENAME=ldap.crt
-      - LDAP_TLS_KEY_FILENAME=ldap.key
-      - LDAP_TLS_CA_CRT_FILENAME=ca.crt
-      - LDAP_TLS_ENFORCE=false
-      - LDAP_TLS_CIPHER_SUITE=SECURE256:-VERS-SSL3.0
-      - LDAP_TLS_PROTOCOL_MIN=3.1
-      - LDAP_TLS_VERIFY_CLIENT=demand
-      - LDAP_REPLICATION=false
-      - LDAP_REMOVE_CONFIG_AFTER_SETUP=true
-      - LDAP_SSL_HELPER_PREFIX=ldap
+      COMPOSE_HTTP_TIMEOUT: 200
+      LDAP_LOG_LEVEL: 256
+      LDAP_ORGANISATION: Software Architecture
+      LDAP_DOMAIN: arqsoft.unal.edu.co
+      LDAP_BASE_DN:
+      LDAP_ADMIN_PASSWORD: admin
+      LDAP_CONFIG_PASSWORD: config
+      LDAP_READONLY_USER: false
+      LDAP_BACKEND: hdb
+      LDAP_TLS: true
+      LDAP_TLS_CRT_FILENAME: ldap.crt
+      LDAP_TLS_KEY_FILENAME: ldap.key
+      LDAP_TLS_CA_CRT_FILENAME: ca.crt
+      LDAP_TLS_ENFORCE: false
+      LDAP_TLS_CIPHER_SUITE: SECURE256:-VERS-SSL3.0
+      LDAP_TLS_PROTOCOL_MIN: 3.1
+      LDAP_TLS_VERIFY_CLIENT: demand
+      LDAP_REPLICATION: false
+      LDAP_REMOVE_CONFIG_AFTER_SETUP: true
+      LDAP_SSL_HELPER_PREFIX: ldap
 
     tty: true
     stdin_open: true
@@ -37,8 +37,8 @@ services:
       - ldap_certs:/container/service/slapd/assets/certs
 
     ports:
-      - "389:389"
-      - "636:636"
+      - 389:389
+      - 636:636
 
     hostname: arqsoft.unal.edu.co
 
@@ -47,8 +47,8 @@ services:
     container_name: ldap_client
 
     environment:
-      - PHPLDAPADMIN_LDAP_HOSTS=swarch2022ii-ldap
-      - PHPLDAPADMIN_HTTPS=false
+      PHPLDAPADMIN_LDAP_HOSTS: swarch2022ii-ldap
+      PHPLDAPADMIN_HTTPS: false
 
     volumes:
       - phpldapadmin_data:/var/www/phpldapadmin
@@ -63,4 +63,5 @@ volumes:
   ldap_data:
   ldap_config:
   ldap_certs:
+
   phpldapadmin_data:
