--- a/swarch2022ii_ms/docker-compose.yml
+++ b/swarch2022ii_ms/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       - 4000:4000
 
     environment:
-      - DB_HOST=db
-      - DB_PORT=3306
-      - DB_USER=swarch2022ii
-      - DB_PASSWORD=2022
-      - DB_NAME=swarch2022ii_db
-      - URL=0.0.0.0:4000
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_USER: swarch2022ii
+      DB_PASSWORD: 2022
+      DB_NAME: swarch2022ii_db
+      URL: 0.0.0.0:4000
 
     links:
       - db
