Add configuration for interoperability
Add docker-compose general file, and vscode db connections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,46 @@
 {
-    "sqltools.connections": [
-        {
-            "mysqlOptions": {
-                "authProtocol": "default"
-            },
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "swarch2022ii_db",
-            "group": "swarch2022",
-            "database": "swarch2022ii_db",
-            "username": "swarch2022ii",
-            "password": "2022"
-        }
-    ]
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "swarch2022ii_db",
+      "group": "swarch2022",
+      "database": "swarch2022ii_db",
+      "username": "swarch2022ii",
+      "password": "2022"
+    },
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3308,
+      "driver": "MySQL",
+      "name": "sa_bank_ss_db",
+      "group": "swarch2022",
+      "database": "sa_bank_ss_dev",
+      "username": "arquisoft",
+      "password": "arqui"
+    },
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3310,
+      "driver": "MySQL",
+      "name": "sa_user_ss_db",
+      "group": "swarch2022",
+      "database": "sa_user_ss_dev",
+      "username": "arquisoft",
+      "password": "arqui"
+    }
+  ]
 }
